Added register CEP and BirthDay